objects/ReportProjectProfileChild__c.object
<CustomObject>
    <fields>
        <fullName>Alert_Reminder_User1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Reminder_User2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Alert_Reminder_User3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Alert Reminder User3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds45Iv</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assignee_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assignee Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds45FS</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds8</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds9</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CE_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CE Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds45IC</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds6</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>QA_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QA Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds45Fx</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ReportProjectProfile__c</fullName>
        <label>Report Project Profile</label>
        <referenceTo>ReportProjectProfile__c</referenceTo>
        <relationshipName>Report_Project_Profile_Childs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_1__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 1</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 2</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds5</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Supervisor_Esc_3__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Supervisor Esc 3</label>
        <referenceTo>User</referenceTo>
        <relationshipName>ReportProfileChilds45GL</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Report Profile Child</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>RPPC-{00000}</displayFormat>
        <label>Report Project Profile Child Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Report Profile Childs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>